test/sema/negative/wrong_condition_type.output
wrong_condition_type.impala:2 col 9: error: wrong condition type; expected 'bool' but found 'i32'
